2008-11-11  Neal H. Walfield  <neal@gnu.org>

	* ia32/l4/bits/vregs.h (_L4_utcb): Use %gs:0.

2008-08-16  Neal H. Walfield  <neal@gnu.org>

	* l4/ipc.h (_L4_reply_wait_timeout): Use _L4_zero_time, not
	_L4_time_period (0).
	* l4/schedule.h (_L4_time_period): Correctly handle the case where
	USEC is zero.

2008-08-14  Neal H. Walfield  <neal@gnu.org>

	* l4/gnu/kip.h (l4_memory_desc_type_to_string): New function.

2008-06-18  Thomas Schwinge  <tschwinge@gnu.org>

	* ia32/l4/bits/syscall.h (_L4_kernel_interface): Cast return value.
	* ia32/l4/bits/vregs.h (_L4_utcb_base): Don't do calculations with a
	void *.  Cast return value.
	* l4/gnu/thread.h (l4_set_user_defined_handle): Change name of argument
	as to avoid using a C++ keyword.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: Link files into `sysroot/include/' instead of `include/'.

	* tests/Makefile.am (noinst_PROGRAMS): Rename to...
	(check_PROGRAMS): ... this.
	(AM_CPPFLAGS): Set to $(CHECK_CPPFLAGS).

2008-02-15  Neal H. Walfield  <neal@gnu.org>

	* l4/math.h (_L4_lsb): Count correctly.

	* l4/space.h: Include <assert.h>.
	(_L4_fpage): Add asserts.

2008-02-05  Neal H. Walfield  <neal@gnu.org>

	* l4/features.h [_L4_COMPAT]: Enable the L4 compatability
	interface.
	[! _L4_COMPAT]: Enable the GNU interface.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* l4/compat/kip.h (L4_ApiVersion): Cast result of
	_L4_kernel_interface to elide gcc warning.
	(L4_ApiFlags): Likewise.
	(L4_KernelId): Likewise.

2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* l4/pagefault.h (_L4_pagefault_reply_formulate_in): New function.
	(_L4_pagefault_reply_formulate): Reimplement in terms of this new
	function.
	* l4/gnu/pagefault.h (l4_pagefault_reply_formulate_in): New
	function.
	
2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* l4/ipc.h (_L4_msg_put): Correctly advance ANY_TYPED.
	(_L4_msg_get): Likewise.

2007-12-08  Neal H. Walfield  <neal@gnu.org>

	* ia32/l4/bits/vregs.h (_L4_utcb_base): New function.
