@@ -1,3 +1,7 @@
+2008-11-17  Neal H. Walfield  <neal@gnu.org>
+
+	* ia32/l4/bits/syscall.h: New function.
+
 2008-11-11  Neal H. Walfield  <neal@gnu.org>
 
 	* ia32/l4/bits/vregs.h (_L4_utcb): Use %gs:0.
